Revert "Merge pull request #1 from HoaiDang-work/upgrade-lib"
This reverts commit 32d0d2ca04673f9983a4cc9ae022f405a9e484e4, reversing
changes made to 9fd2eb8c8a3ec51e4572955907724d39d59db5a6.